--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dev": "gatsby develop",
     "lint": "eslint . --ext .js --cache",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "SITEURL=https://hungdinhvan.github.io gatsby build --prefix-paths && gh-pages -d public -b main"
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
